# ml_gym

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
dashboard/: README.md  app.py  config.py
dashboard/components/: calendar_heatmap.py  category_chart.py  entry_form.py  log_table.py
dashboard/pages/: 1_📊_Overview.py  2_➕_Add_Entry.py  3_📈_Analytics.py  4_📋_History.py
probability-practice/: README.md  RULES.md  main.py
probability-practice/examples/: PROBABILITY_EXAMPLES.md
probability-practice/questions/: BAYES_THEOREM_QUESTIONS.md  CONDITIONAL_PROBABILITY_QUESTIONS.md  COUNTING_QUESTIONS.md  COVARIANCE_QUESTIONS.md  EASY.md  EXAMPLE_QUESTIONS.md  EXPECTATION_QUESTIONS.md  INDEPENDENCE_QUESTIONS.md  JOINT_PROBABILITY_QUESTIONS.md  MARGINALS_PROBABILITY_QUESTIONS.md  PERMUTATIONS_QUESTIONS.md  TOTAL_PROBABILITY_QUESTIONS.md  VARIANCE_QUESTIONS.md  VERY_EASY.md  axioms.json  combinations.json  permutations.json
probability-practice/references/: A First Course in Probability (Notes).md  FORMULAS.md  PROBABILITY_AND_STATS.md  Probability for Machine Learning (Notes).md
probability-practice/src/: enrich_question.py  fraction_utils.py  generate_notebook.py  openrouter_client.py  probability_generators.py  question_randomizer.py  random_int.py  write_solutions.py
source/coach/: PROBLEMS.md  analytics.py  grading.py  main.py  question_generator.py  quiz.py  registry.py  storage.py  streamlit_app.py
source/fast_math/: analytics.py  grading.py  main.py  models.py  question_generator.py  quiz.py  registry.py  storage.py  (+1 more)
(+218 files in other folders)
